--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.example</groupId>
+
+  <groupId>br.unicamp.ic.inf335</groupId>
   <artifactId>atividade6</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Archetype - atividade6</name>
-  <url>http://maven.apache.org</url>
+
+  <name>Atividade 6</name>
+  <description>A simple atividade6.</description>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.28</version>
-    </dependency>
-    <dependency>
       <groupId>org.mongodb</groupId>
-      <artifactId>mongodb-jdbc</artifactId>
-      <version>2.1.4</version>
+      <artifactId>mongodb-driver-sync</artifactId>
+      <version>4.3.4</version>
     </dependency>
   </dependencies>
 </project>
